# flask_react_and_postgres

./: .gitignore  README.md  package-lock.json  pyproject.toml
backend/: .flaskenv  app.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.css  App.js  InputField.js  index.css
