[tool.poetry]
name = "flask-react-and-postgres"
version = "0.1.0"
description = ""
authors = ["rich <rkba2@outlook.com>"]
readme = "README.md"
packages = [{include = "flask_react_and_postgres"}]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.9"
postgres = "^4.0"
flask-sqlalchemy = "^3.1.1"
flask = "^2.2.3"
axios = "^0.4.0"
flask-cors = "^4.0.1"
react = "^4.3.0"
python-dotenv = "^1.0.1"
flask-pymongo = "^2.3.0"
pymongo = "^4.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
